[tool.poetry]
name = "enhanced-science-trivia-bot"
version = "0.1.0"
description = "An enhanced science trivia bot for Telegram"
authors = ["Raphael scholar"]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.0.0"
python-telegram-bot = "^20.4"
pytelegrambotapi = "^4.14.0"
telebot = "^0.0.5"
requests = "^2.31.0"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
google-generativeai = "^0.3.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "your_app_name:main"

[tool.pyright]
useLibraryCodeForTypes = true

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']
